Fixed a layout issue with the section nav

--- a/public/styles/theme/theme.less
+++ b/public/styles/theme/theme.less
@@ -136,7 +136,7 @@ h4 {
 			background-color: @navbar-keystone-toggle-icon-bar-bg;
 		}
 	}
-
+	
 	.navbar-collapse,
 	.navbar-form {
 		border-color: darken(@navbar-keystone-bg, 7%);
@@ -233,6 +233,11 @@ h4 {
 	border-top: none;
 	border-left: none;
 	border-right: none;
+	
+	.navbar-collapse {
+		padding-left: 0px;
+		padding-right: 0px;
+	}
 	
 	li > a {
 		color: @gray-light;
